Update client RPC to match activeJ6 version